# zephyr-steering-wheel-unit

./: .gitignore  .gitmodules  CMakeLists.txt  prj.conf  west.yml
app/: CMakeLists.txt  example_steering_wheel.overlay  prj.conf
app/peripherals/: adc.c  adc.h  ads1015.c  ads1015.h  can.c  counter.c  counter.h  gpio.c  gpio.h  pwm.c  pwm.h
app/src/: main.c  steering_wheel.c  steering_wheel.h
boards/hydrogreen/steering_wheel/: Kconfig.defconfig  Kconfig.steering_wheel  board.cmake  board.yml  steering_wheel.dts  steering_wheel.yaml  steering_wheel_defconfig  steering_wheel_hydra.overlay  steering_wheel_hydros.overlay
src/: main.c  steering_wheel.c  steering_wheel.h  steering_wheel_can.c  steering_wheel_can.h  steering_wheel_display.c  steering_wheel_display.h  steering_wheel_inputs.c  steering_wheel_inputs.h
ui/: screens.c  screens.h  ui_image_horn.c  ui_image_shortwave.c
